sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:4: error: not found: value i
  i = 1
  ^AlgGnomeSort:5: error: not found: value i
  while(i != n-1)
        ^AlgGnomeSort:7: error: not found: value i
    if(i == 0 || plusPetit(i, i+1))
       ^AlgGnomeSort:7: error: not found: value i
    if(i == 0 || plusPetit(i, i+1))
                           ^AlgGnomeSort:7: error: not found: value i
    if(i == 0 || plusPetit(i, i+1))
                              ^AlgGnomeSort:8: error: not found: value i
      i+=1
      ^AlgGnomeSort:11: error: not found: value i
      echange(i, i+1)
              ^AlgGnomeSort:11: error: not found: value i
      echange(i, i+1)
                 ^AlgGnomeSort:12: error: not found: value i
      i-= 1
      ^